lugx-k8s/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: lugx-frontend
          image: divyanjaliperera/lugx-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend
spec:
  selector:
    app: lugx-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
